environments/test/passport-status-api-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passport-status-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: passport-status-api
      app.kubernetes.io/component: api
  template:
    spec:
      containers:
        - name: passport-status-api
          env:
            - name: SPRING_ARTEMIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: security-properties-prop-module-passport-status-amq-security-test
                  key: passport-status-test
            - name: SPRING_DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: test-postgresql-ha-postgresql
                  key: postgresql-password
          envFrom:
            - secretRef:
                name: passport-status-api-test
          # increase resources to accommodate database seeding
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
