environments/test/passport-status-api-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passport-status-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: passport-status-api-test.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-api
                port:
                  name: http
