environments/test/passport-status-frontend-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passport-status-frontend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: passport-status-test.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-frontend
                port:
                  name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-passport-status-frontend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: passport-status-basic-auth-test
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
    - host: passport-status-test.dev-dp.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-frontend
                port:
                  name: http
